--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-redux": "^9.2.0"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
